# citizenguard

./: API_SETUP_GUIDE.md  AUTHORITY_IMPLEMENTATION_SUMMARY.md  BACKEND_FIX_GUIDE.md  CHAT_FIX_GUIDE.md  CLAUDE.md  CLAUDE_CONTEXT.md  DEPLOYMENT_SUMMARY.md  DESKTOP_DROPDOWN_FIX.md  DEVELOPMENT_GUIDE.md  FLUTTER_MOBILE_APP_GUIDE.md  GOOGLE_MAPS_SETUP.md  GOOGLE_OAUTH_SETUP.md  IMPLEMENTATION_SUMMARY.md  INLINE_VOICE_INPUT_GUIDE.md  MOBILE_API_ENDPOINTS.md  MOBILE_NOTIFICATION_UX_GUIDE.md  MONITORING_SYSTEM_SETUP.md  NOTIFICATION_DETAILS_FIX.md  NOTIFICATION_UI_REDESIGN.md  NOTIFICATION_UI_REDESIGN_V2.md  OAUTH_FIX_SUMMARY.md  QUICK_START.md  README.md  REAL_DATA_UPDATE.md  SETUP.md  VOICE_TRANSCRIPTION_QUICKSTART.md  VOICE_TRANSCRIPTION_SETUP.md  git.sh  package-lock.json  test_backend_error.py  test_oauth_backend.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  FIXES_SUMMARY.md  MAP_REDESIGN_PLAN.md  Procfile  QUICKSTART.md  RAILWAY_CHECKLIST.md  RAILWAY_DEPLOYMENT.md  README.md  RUNNING_WITHOUT_REDIS.md  Verificati_ticktiting.md  check_db_simple.py  check_mongodb.py  check_setup.py  check_users.py  cleanup_database.py  diagnose_alert_notifications.py  diagnose_notifications.py  find_correct_db.py  fix_atlas_location_index.py  fix_location_index.py  fix_password_field.py  main.py  pyproject.toml  pytest.ini  railway.toml  readmetext.md  requirements.txt  run_location_migration.py  run_server.py  seed_prod_users.py  seed_test_users.py  start.sh  submit_test_report.py  technical_architecure.md  test_notifications.py  test_rbac.py  test_rbac_simple.py
(+350 files in other folders)
