[project]
name = "CoastGuardian-backend"
version = "1.0.0"
description = "CoastGuardian - Ocean Hazard Reporting Platform Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "motor>=3.3.2",  # Async MongoDB driver
    "redis>=5.0.1",
    "pymongo>=4.6.1",

    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",  # JWT
    "passlib[bcrypt]>=1.7.4",  # Password hashing
    "bcrypt>=4.1.2",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",

    # OAuth2
    "authlib>=1.3.0",
    "httpx>=0.26.0",

    # Email
    "aiosmtplib>=3.0.1",
    "email-validator>=2.1.0",
    "jinja2>=3.1.3",

    # SMS
    "twilio>=8.12.0",

    # Validation
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "pydantic[email]>=2.5.3",

    # Utilities
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_backend"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
